Fixing the error of cropping the photo and the lack of the shadow effect

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,5 @@
 header {
-  height: 100vh;
+  height: 120vh;
   padding-top: 7rem;
   overflow: hidden;
 }
@@ -43,9 +43,9 @@ header {
   width: 22rem;
   height: 30rem;
   position: absolute;
-  left: calc(50%-11rem);
+  left: calc(50% - 11rem);
   margin-top: 4rem;
-  border: 12rem 12trm 0 0;
+  border-radius: 12rem 12rem 0 0;
   overflow: hidden;
   padding: 5rem 1.5rem 1.5rem 1.5rem;
 }
